Update WallpaperChanger to v1.0.1

--- a/depictions/wallpaperchanger.html
+++ b/depictions/wallpaperchanger.html
@@ -54,6 +54,11 @@
         
         <p class="header">Changelog</p>
         <ol class="txt" style="list-style-type: none">
+            <li>v1.0.1 - released 1/18/2020</li>
+            <ul class="txt" style="margin-left: 50px; list-style-type: disc">
+                <li>Maintenance updates</li>
+                </ul>
+            <br>
             <li>v1.0 - released 12/28/19</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
                 <li>Initial release</li>
