Update CercubeDarkMode, add YouTubeDarkModeSync

--- a/depictions/cercubedarkmode/cercubedarkmode.html
+++ b/depictions/cercubedarkmode/cercubedarkmode.html
@@ -12,16 +12,24 @@
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
             <li>Dark mode in Cercube for YouTube</li>
             <li>Matches YouTube's stock dark mode</li>
+            <li>Compatible with <a href="https://captinc.github.io/depictions/youtubedarkmodesync.html" target="_blank" style="color: #797CFB">YouTubeDarkModeSync</a></li>
             <li>Make the toggles in Cercube's settings look like the stock YouTube ones</li>
             </ul>
         
-        <p class="header" style="margin-top: 50px">Screenshots:</p>
+        <p class="header" style="margin-top: 50px">Screenshot:</p>
         <p class="txt" style="margin-left: 50px">
             <a href="1.png" target="_blank"><img src="1.png" width=268 height=auto></a>
             </p>
             
         <p class="header">Changelog</p>
         <ol class="txt" style="list-style-type: none">
+            <li>v1.1 - released 1/20/2020</li>
+            <ul class="txt" style="margin-left: 50px; list-style-type: disc">
+                <li>Compatibility with the latest version of Cercube</li>
+                <li>Compatibility with YouTubeDarkModeSync</li>
+                <li>Bug fixes</li>
+                </ul>
+            <br>
             <li>v1.0 - released 1/05/2020</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
                 <li>Initial release</li>
