--- a/depictions/batchomatic/batchomatic.html
+++ b/depictions/batchomatic/batchomatic.html
@@ -59,7 +59,7 @@
             </ul>
         
         <p class="header" style="margin-top: 50px">Screenshots</p>
-        <script src="screenshots.js" sender="batchomatic.html"></script>
+        <script src="screenshots.js"></script>
         
         <p class="header" style="margin-top: 50px">Changelog</p>
         <ol class="txt" style="list-style-type: none">
