--- a/depictions/wallpaperchanger.html
+++ b/depictions/wallpaperchanger.html
@@ -1,14 +1,15 @@
 <html>
-    <body style="background-color: #2d2d2e">
+    <meta name="viewport" content="width = device-width, initial-scale = 1.0">
+    <body style="background-color: #06213b">
         <p align="center" class="title">WallpaperChanger</p>
         <p align="center" class="txt">
             Compatible with iOS 11.0+. Type "wallpaper" into Terminal to get started<br>
             <br>
-            <a href="https://github.com/captinc/WallpaperChanger/" target="_blank" style="color: #797CFB">Source code</a><br>
             <a href="https://www.reddit.com/r/jailbreak/comments/eguyrg/release_wallpaperchanger_change_wallpaper_from/" target="_blank" style="color: #797CFB">Reddit post</a><br>
+            <a href="https://github.com/captinc/WallpaperChanger/" target="_blank" style="color: #797CFB">Source code</a><br>
             </p>
             
-        <p class="header">Features:</p>
+        <p class="header">Features</p>
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
             <li>Change your wallpaper to a specified image in your device's filesystem</li>
             <li>Set appearance-aware wallpapers on iOS 13+ (One for light mode and one for dark mode. Not supported on iOS 12 and older)</li>
@@ -17,7 +18,7 @@
             <li>Enable/disable parallax (perspective zoom)</li>
             </ul>
 
-        <p class="header">Usage:</p>
+        <p class="header">Usage</p>
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
             <li>"-n" - Set a normal wallpaper. Specify the image path immediately after -n</li>
             <li>"-a" - Set an appearance-aware wallpaper. Specify the light image path immediately after -a and the dark image path after that</li>
@@ -36,7 +37,7 @@
             <li>Appearance-aware wallpapers can only be used on iOS 13+</li>
             </ul>
         
-        <p class="header">Examples:</p>
+        <p class="header">Examples</p>
         <ul class="txt" style="margin-left: 50px">
             <li>"wallpaper -n /var/mobile/Documents/dog.png -b"</li>
                 <ol class="txt" style="list-style-type: none">
