--- a/depictions/youtubedarkmodesync.html
+++ b/depictions/youtubedarkmodesync.html
@@ -1,14 +1,15 @@
 <html>
-    <body style="background-color: #2d2d2e">
+    <meta name="viewport" content="width = device-width, initial-scale = 1.0">
+    <body style="background-color: #06213b">
         <p align="center" class="title">YouTubeDarkModeSync</p>
         <p align="center" class="txt">
             Compatible with iOS 13.0+<br>
             <br>
-            <a href="https://github.com/captinc/YouTubeDarkModeSync/" target="_blank" style="color: #797CFB">Source code</a><br>
             <a href="https://www.reddit.com/r/jailbreak/comments/ergrue/release_youtubedarkmodesync_toggle_youtubes/" target="_blank" style="color: #797CFB">Reddit post</a><br>
+            <a href="https://github.com/captinc/YouTubeDarkModeSync/" target="_blank" style="color: #797CFB">Source code</a><br>
             </p>
             
-        <p class="header">Features:</p>
+        <p class="header">Features</p>
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
             <li>Toggle YouTube's built-in dark mode with iOS 13's dark mode</li>
             <li>Compatible with <a href="https://captinc.github.io/depictions/cercubedarkmode/cercubedarkmode.html" target="_blank" style="color: #797CFB">CercubeDarkMode</a></li>
