--- a/depictions/darkmodetoggle/screenshots.html
+++ b/depictions/darkmodetoggle/screenshots.html
@@ -1,12 +1,6 @@
 <html>
-    <body style="background-color: #2d2d2e">
-        <p style="margin-left: 50px">
-            <a href="1.png" target="_blank"><img src="1.png" width=268 height=auto></a> <br>
-            <a href="2.png" target="_blank"><img src="2.png" width=268 height=auto></a> <br>
-            <a href="3.png" target="_blank"><img src="3.png" width=268 height=auto></a> <br>
-            <a href="4.png" target="_blank"><img src="4.png" width=268 height=auto></a> <br>
-            <a href="5.png" target="_blank"><img src="5.png" width=268 height=auto></a> <br>
-            <a href="6.png" target="_blank"><img src="6.png" width=268 height=auto></a>
-            </p>
+    <meta name="viewport" content="width = device-width, initial-scale = 1.0">
+    <body style="background-color: #06213b">
+        <script src="screenshots.js"></script>
         </body>
     </html>
