--- a/depictions/darkmodetoggle/darkmodetoggle.html
+++ b/depictions/darkmodetoggle/darkmodetoggle.html
@@ -18,7 +18,7 @@
             <li>Provides a custom module for use with iOS 12 and older</li>
             <li>After toggling dark mode, kill your apps or respring to enable/disable your tweaks</li>
             <li>Optionally run a shell script as root afterwards (useful for changing your wallpaper with dark mode)</li>
-            <li>Compatible with <a href="https://captinc.github.io/depictions/wallpaperchanger.html" target="_blank" style="color: #797CFB">WallpaperChanger</a> and <a href="https://captinc.github.io/depictions/youtubedarkmodesync.html" target="_blank" style="color: #797CFB">YouTubeDarkModeSync</a></li>
+            <li>Compatible with <a href="https://captinc.github.io/depictions/wallpaperchanger.html" target="_blank" style="color: #797CFB">WallpaperChanger</a></li>
             </ul>
         
         <p class="header">Main uses</p>
