--- a/depictions/batchomatic/batchomatic.html
+++ b/depictions/batchomatic/batchomatic.html
@@ -7,8 +7,8 @@
             <br>
             Compatible with iOS 11.0+. Works with Cydia, Zebra, Sileo, and Installer on unc0ver, checkra1n, Chimera, and unc0ver dark<br>
             <br>
-            <a href="https://www.reddit.com/r/jailbreak/comments/cqarr6/release_batchomatic_v30_on_bigboss_batch_install/" target="_blank" style="color: #797CFB">Reddit post</a><br>
-            <a href="https://github.com/captinc/Batchomatic/" target="_blank" style="color: #797CFB">Source code</a><br>
+            <a href="https://www.reddit.com/r/jailbreak/comments/cqarr6/release_batchomatic_v30_on_bigboss_batch_install" target="_blank" style="color: #797CFB">Reddit post</a><br>
+            <a href="https://github.com/captinc/Batchomatic" target="_blank" style="color: #797CFB">Source code</a><br>
             </p>
             
         <p class="header" style="margin-top: 50px">Description</p>
