--- a/depictions/cercubedarkmode/cercubedarkmode.html
+++ b/depictions/cercubedarkmode/cercubedarkmode.html
@@ -3,18 +3,19 @@
     <body style="background-color: #06213b">
         <p align="center" class="title">CercubeDarkMode</p>
         <p align="center" class="txt">
+            Dark mode in Cercube for YouTube<br>
             Compatible with iOS 11.0+<br>
             <br>
-            <a href="https://www.reddit.com/r/jailbreak/comments/ekmhtj/release_cercubedarkmode_dark_mode_in_cercube_for/" target="_blank" style="color: #797CFB">Reddit post</a><br>
-            <a href="https://github.com/captinc/CercubeDarkMode/" target="_blank" style="color: #797CFB">Source code</a><br>
+            <a href="https://www.reddit.com/r/jailbreak/comments/ekmhtj/release_cercubedarkmode_dark_mode_in_cercube_for" target="_blank" style="color: #797CFB">Reddit post</a><br>
+            <a href="https://github.com/captinc/CercubeDarkMode" target="_blank" style="color: #797CFB">Source code</a><br>
             </p>
             
         <p class="header">Features</p>
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
-            <li>Dark mode in Cercube for YouTube</li>
+            <li>Make Cercube's settings menus dark</li>
             <li>Matches YouTube's stock dark mode</li>
-            <li>Compatible with <a href="https://captinc.github.io/depictions/youtubedarkmodesync.html" target="_blank" style="color: #797CFB">YouTubeDarkModeSync</a></li>
             <li>Make the toggles in Cercube's settings look like the stock YouTube ones</li>
+            <li>Compatible with <a href="https://captinc.github.io/depictions/youtubedarkmodesync.html" target="_blank" style="color: #797CFB">YouTubeDarkModeSync</a></li>
             </ul>
         
         <p class="header" style="margin-top: 50px">Screenshots</p>
