--- a/depictions/commandmodule/commandmodule.html
+++ b/depictions/commandmodule/commandmodule.html
@@ -6,13 +6,14 @@
             Control Center module to run a shell script<br>
             Compatible with iOS 11.0+<br>
             <br>
-            <a href="https://www.reddit.com/r/jailbreak/comments/exyfol/release_commandmodule_control_center_module_to/" target="_blank" style="color: #797CFB">Reddit post</a><br>
-            <a href="https://github.com/captinc/CommandModule/" target="_blank" style="color: #797CFB">Source code</a><br>
+            <a href="https://www.reddit.com/r/jailbreak/comments/exyfol/release_commandmodule_control_center_module_to" target="_blank" style="color: #797CFB">Reddit post</a><br>
+            <a href="https://github.com/captinc/CommandModule" target="_blank" style="color: #797CFB">Source code</a><br>
             </p>
             
         <p class="header" style="margin-top: 50px">Description</p>
         <ul class="txt" style="margin-left: 50px">
-            <li>Runs /var/mobile/Library/Preferences/com.captinc.commandmodule.sh as root</li>
+            <li>Control center module to run the following script as root</li>
+            <li>/var/mobile/Library/Preferences/com.captinc.commandmodule.sh</li>
             </ul>
         
         <p class="header" style="margin-top: 50px">Screenshots</p>
