--- a/depictions/wallpaperchanger.html
+++ b/depictions/wallpaperchanger.html
@@ -3,12 +3,17 @@
     <body style="background-color: #06213b">
         <p align="center" class="title">WallpaperChanger</p>
         <p align="center" class="txt">
-            Compatible with iOS 11.0+. Type "wallpaper" into Terminal to get started<br>
+            Change wallpaper from command line<br>
+            Compatible with iOS 11.0+<br>
             <br>
-            <a href="https://www.reddit.com/r/jailbreak/comments/eguyrg/release_wallpaperchanger_change_wallpaper_from/" target="_blank" style="color: #797CFB">Reddit post</a><br>
-            <a href="https://github.com/captinc/WallpaperChanger/" target="_blank" style="color: #797CFB">Source code</a><br>
+            <a href="https://www.reddit.com/r/jailbreak/comments/eguyrg/release_wallpaperchanger_change_wallpaper_from" target="_blank" style="color: #797CFB">Reddit post</a><br>
+            <a href="https://github.com/captinc/WallpaperChanger" target="_blank" style="color: #797CFB">Source code</a><br>
             </p>
             
+        <ul class="txt">
+            <li>Type "wallpaper" into Terminal to get started</li>
+            </ul>
+        
         <p class="header">Features</p>
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
             <li>Change your wallpaper to a specified image in your device's filesystem</li>
@@ -16,6 +21,7 @@
             <li>Set normal wallpapers on iOS 11+ (single wallpaper for both light & dark mode)</li>
             <li>Set only the lock screen wallpaper, only the home screen, or both</li>
             <li>Enable/disable parallax (perspective zoom)</li>
+            <li>Can be used with <a href="https://captinc.github.io/depictions/darkmodetoggle/darkmodetoggle.html" target="_blank" style="color: #797CFB">DarkModeToggle</a> to have a custom wallpaper that changes with dark mode</li>
             </ul>
 
         <p class="header">Usage</p>
