--- a/depictions/youtubedarkmodesync.html
+++ b/depictions/youtubedarkmodesync.html
@@ -3,16 +3,18 @@
     <body style="background-color: #06213b">
         <p align="center" class="title">YouTubeDarkModeSync</p>
         <p align="center" class="txt">
+            Toggle YouTube's built-in dark mode with iOS 13's dark mode<br>
             Compatible with iOS 13.0+<br>
             <br>
-            <a href="https://www.reddit.com/r/jailbreak/comments/ergrue/release_youtubedarkmodesync_toggle_youtubes/" target="_blank" style="color: #797CFB">Reddit post</a><br>
-            <a href="https://github.com/captinc/YouTubeDarkModeSync/" target="_blank" style="color: #797CFB">Source code</a><br>
+            <a href="https://www.reddit.com/r/jailbreak/comments/ergrue/release_youtubedarkmodesync_toggle_youtubes" target="_blank" style="color: #797CFB">Reddit post</a><br>
+            <a href="https://github.com/captinc/YouTubeDarkModeSync" target="_blank" style="color: #797CFB">Source code</a><br>
             </p>
             
         <p class="header">Features</p>
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
-            <li>Toggle YouTube's built-in dark mode with iOS 13's dark mode</li>
+            <li>Toggles YouTube's built-in dark mode whenever you toggle iOS 13's dark mode</li>
             <li>Compatible with <a href="https://captinc.github.io/depictions/cercubedarkmode/cercubedarkmode.html" target="_blank" style="color: #797CFB">CercubeDarkMode</a></li>
+            <li>Useful with <a href="https://captinc.github.io/depictions/darkmodetoggle/darkmodetoggle.html" target="_blank" style="color: #797CFB">DarkModeToggle</a> (FYI, YouTubeDarkModeSync adapts with iOS 13 already, so there's no need to explicitly disable it in DarkModeToggle)</li>
             </ul>
         
         <p class="header">Changelog</p>
