--- a/depictions/youtubedarkmodesync.html
+++ b/depictions/youtubedarkmodesync.html
@@ -5,6 +5,7 @@
         <p align="center" class="txt">
             Toggle YouTube's built-in dark mode with iOS 13's dark mode<br>
             Compatible with iOS 13.0+<br>
+            Note: YouTube v15.03.1 added this tweak's features into the stock YouTube app. However, this tweak is still fully functional on older versions of YouTube as well as the latest version<br>
             <br>
             <a href="https://www.reddit.com/r/jailbreak/comments/ergrue/release_youtubedarkmodesync_toggle_youtubes" target="_blank" style="color: #797CFB">Reddit post</a><br>
             <a href="https://github.com/captinc/YouTubeDarkModeSync" target="_blank" style="color: #797CFB">Source code</a><br>
@@ -14,11 +15,15 @@
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
             <li>Toggles YouTube's built-in dark mode whenever you toggle iOS 13's dark mode</li>
             <li>Compatible with <a href="https://captinc.github.io/depictions/cercubedarkmode/cercubedarkmode.html" target="_blank" style="color: #797CFB">CercubeDarkMode</a></li>
-            <li>Useful with <a href="https://captinc.github.io/depictions/darkmodetoggle/darkmodetoggle.html" target="_blank" style="color: #797CFB">DarkModeToggle</a> (FYI, YouTubeDarkModeSync adapts with iOS 13 already, so there's no need to explicitly disable it in DarkModeToggle)</li>
             </ul>
         
         <p class="header">Changelog</p>
         <ol class="txt" style="list-style-type: none">
+            <li>v1.1 - released 2/09/2020</li>
+            <ul class="txt" style="margin-left: 50px; list-style-type: disc">
+                <li>Fixed crashing/freezing</li>
+                </ul>
+            <br>
             <li>v1.0 - released 1/20/2020</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
                 <li>Initial release</li>
