--- a/depictions/commandmodule/commandmodule.html
+++ b/depictions/commandmodule/commandmodule.html
@@ -21,6 +21,11 @@
         
         <p class="header" style="margin-top: 50px">Changelog</p>
         <ol class="txt" style="list-style-type: none">
+            <li>v1.0.1 - released 02/09/2020</li>
+            <ul class="txt" style="margin-left: 50px; list-style-type: disc">
+                <li>Maintenance updates</li>
+                </ul>
+            <br>
             <li>v1.0 - released 02/02/2020</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
                 <li>Initial release</li>
