--- a/depictions/batchomatic/batchomatic.html
+++ b/depictions/batchomatic/batchomatic.html
@@ -63,6 +63,11 @@
         
         <p class="header" style="margin-top: 50px">Changelog</p>
         <ol class="txt" style="list-style-type: none">
+            <li>v4.2.1 - released 02/09/2020</li>
+            <ul class="txt" style="margin-left: 50px; list-style-type: disc">
+                <li>Fixed Cydia not queuing tweaks</li>
+                </ul>
+            <br>
             <li>v4.2 - released 02/02/2020</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
                 <li>Switch to an icon for the Batchomatic button</li>
