Update depictions and homepage

--- a/depictions/wallpaperchanger.html
+++ b/depictions/wallpaperchanger.html
@@ -6,8 +6,8 @@
             Change wallpaper from command line<br>
             Compatible with iOS 11.0+<br>
             <br>
-            <a href="https://www.reddit.com/r/jailbreak/comments/eguyrg/release_wallpaperchanger_change_wallpaper_from" target="_blank" style="color: #797CFB">Reddit post</a><br>
-            <a href="https://github.com/captinc/WallpaperChanger" target="_blank" style="color: #797CFB">Source code</a><br>
+            <a class="btn" href="https://www.reddit.com/r/jailbreak/comments/eguyrg/release_wallpaperchanger_change_wallpaper_from" target="_blank">Reddit post</a><br>
+            <a class="btn" href="https://github.com/captinc/WallpaperChanger" target="_blank">Source code</a><br>
             </p>
             
         <ul class="txt">
@@ -87,6 +87,21 @@
                 font-size: 18px;
                 font-family: Helvetica Neue;
                 color: #FFFFFF;
+            }
+            .btn {
+                display: block;
+                width: 200px;
+                height: auto;
+                font-size: 22px;
+                font-family: Helvetica Neue;
+                color: #FFFFFF;
+                text-decoration: none;
+                border-radius: 10px;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                padding-left: 10px;
+                padding-right: 10px;
+                background-color: #22aeb5;
             }
             </style>
         </body>
