--- a/depictions/youtubedarkmodesync.html
+++ b/depictions/youtubedarkmodesync.html
@@ -7,8 +7,8 @@
             Compatible with iOS 13.0+<br>
             Note: YouTube v15.03.1 added this tweak's features into the stock YouTube app. However, this tweak is still fully functional on older versions of YouTube as well as the latest version<br>
             <br>
-            <a href="https://www.reddit.com/r/jailbreak/comments/ergrue/release_youtubedarkmodesync_toggle_youtubes" target="_blank" style="color: #797CFB">Reddit post</a><br>
-            <a href="https://github.com/captinc/YouTubeDarkModeSync" target="_blank" style="color: #797CFB">Source code</a><br>
+            <a class="btn" href="https://www.reddit.com/r/jailbreak/comments/ergrue/release_youtubedarkmodesync_toggle_youtubes" target="_blank">Reddit post</a><br>
+            <a class="btn" href="https://github.com/captinc/YouTubeDarkModeSync" target="_blank">Source code</a><br>
             </p>
             
         <p class="header">Features</p>
@@ -45,6 +45,21 @@
                 font-size: 18px;
                 font-family: Helvetica Neue;
                 color: #FFFFFF;
+            }
+            .btn {
+                display: block;
+                width: 200px;
+                height: auto;
+                font-size: 22px;
+                font-family: Helvetica Neue;
+                color: #FFFFFF;
+                text-decoration: none;
+                border-radius: 10px;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                padding-left: 10px;
+                padding-right: 10px;
+                background-color: #22aeb5;
             }
             </style>
         </body>
