--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <p align="center"><img src="./siteresources/header.png"></p>
 
         <p align="center" style="margin-top: 40px"><a class="addButton" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://captinc.github.io">Add to Cydia</a></p>
-        <p align="center"><a class="addButton" href="zbra://sources/add/url/https://captinc.github.io">Add to Zebra</a></p>
+        <p align="center"><a class="addButton" href="zbra://sources/add/https://captinc.github.io">Add to Zebra</a></p>
         <p align="center"><a class="addButton" href="sileo://source/https://captinc.github.io">Add to Sileo</a></p>
         <p align="center"><a class="addButton" href="installer://add/repo=https://captinc.github.io">Add to Installer</a></p>
 
