--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p align="center"><a class="tweakButton" href="https://captinc.github.io/depictions/darkmodetoggle/darkmodetoggle.html">DarkModeToggle</a></p>
         <p align="center"><a class="tweakButton" href="https://captinc.github.io/depictions/youtubedarkmodesync.html">YouTubeDarkModeSync</a></p>
         <p align="center"><a class="tweakButton" href="https://captinc.github.io/depictions/cercubedarkmode/cercubedarkmode.html">CercubeDarkMode</a></p>
+        <p align="center"><a class="tweakButton" href="https://captinc.github.io/depictions/mobilegoosemodule/mobilegoosemodule.html">MobileGooseModule</a></p>
         <p align="center"><a class="tweakButton" href="https://captinc.github.io/depictions/commandmodule/commandmodule.html">CommandModule</a></p>
         <p align="center"><a class="tweakButton" href="https://captinc.github.io/depictions/wallpaperchanger.html">WallpaperChanger</a></p>
         
