--- a/depictions/youtubedarkmodesync.html
+++ b/depictions/youtubedarkmodesync.html
@@ -3,9 +3,8 @@
     <body style="background-color: #06213b">
         <p align="center" class="title">YouTubeDarkModeSync</p>
         <p align="center" class="txt">
-            Toggle YouTube's built-in dark mode with iOS 13's dark mode<br>
-            Compatible with iOS 13.0+<br>
-            Note: YouTube v15.03.1 added this tweak's features into the stock YouTube app. However, this tweak is still fully functional on older versions of YouTube as well as the latest version<br>
+            Toggle YouTube's built-in dark mode with iOS 13's dark mode, DarkModeToggle, and Noctis<br>
+            Compatible with iOS 11.0+<br>
             <br>
             <a class="btn" href="https://www.reddit.com/r/jailbreak/comments/ergrue/release_youtubedarkmodesync_toggle_youtubes" target="_blank">Reddit post</a><br>
             <a class="btn" href="https://github.com/captinc/YouTubeDarkModeSync" target="_blank">Source code</a><br>
@@ -13,12 +12,20 @@
             
         <p class="header">Features</p>
         <ul class="txt" style="margin-left: 50px; list-style-type: disc">
-            <li>Toggles YouTube's built-in dark mode whenever you toggle iOS 13's dark mode</li>
+            <li>Toggle YouTube's built-in dark mode with iOS 13's dark mode, DarkModeToggle, or Noctis12 (in that order)</li>
+            <li>Respects iOS 13's dark mode if you're on iOS 13. If not, it respects DarkModeToggle. If DarkModeToggle is not installed, it respects Noctis12</li>
             <li>Compatible with <a href="https://captinc.github.io/depictions/cercubedarkmode/cercubedarkmode.html" target="_blank" style="color: #797CFB">CercubeDarkMode</a></li>
+            <li>Note - as of YouTube v15.03.1, stock YouTube toggles with iOS 13's dark mode. However, this tweak is still fully functional if you want support for DarkModeToggle/Noctis/iOS 12</li>
             </ul>
         
         <p class="header">Changelog</p>
         <ol class="txt" style="list-style-type: none">
+            <li>v1.2 - released 2/18/2020</li>
+            <ul class="txt" style="margin-left: 50px; list-style-type: disc">
+                <li>Added support for DarkModeToggle and Noctis12</li>
+                <li>Improved code</li>
+                </ul>
+            <br>
             <li>v1.1 - released 2/09/2020</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
                 <li>Fixed crashing/freezing</li>
