--- a/depictions/mobilegoosemodule/mobilegoosemodule.html
+++ b/depictions/mobilegoosemodule/mobilegoosemodule.html
@@ -15,6 +15,12 @@
         
         <p class="header">Changelog</p>
         <ol class="txt" style="list-style-type: none">
+            <li>v1.0.1 - released 02/19/2020</li>
+            <ul class="txt" style="margin-left: 50px; list-style-type: disc">
+                <li>Added com.pixelomer.mobilegoose as a dependency</li>
+                <li>Fixed .DS_Store issues</li>
+                </ul>
+            <br>
             <li>v1.0 - released 02/18/2020</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
                 <li>Initial release</li>
