--- a/depictions/batchomatic/batchomatic.html
+++ b/depictions/batchomatic/batchomatic.html
@@ -51,11 +51,10 @@
         <ul class="txt" style="margin-left: 50px">
             <li>Offline mode - saves .debs of your tweaks on their current version so you can install all of them offline and/or preserve their exact version</li>
             <li>Editing .deb after creation</li>
+            <li>Repack an installed tweak to a .deb</li>
             <li>Remove all tweaks, with an option to keep basic tweaks like package managers, Filza, and Batchomatic itself (this is like my own version of Restore RootFS)</li>
             <li>Remove all repos from the current package manager, with an option to keep utility repos and BigBoss</li>
             <li>Add a respring/uicache button to each package manager</li>
-            <li>Repack an installed tweak to a .deb by running the following terminal command. It will be placed at /var/mobile/BatchomaticDebs</li>
-            <li><code style="color: #fe3280">bmd deb com.package.identifier</code></li>
             </ul>
         
         <p class="header">Screenshots</p>
@@ -63,6 +62,13 @@
         
         <p class="header">Changelog</p>
         <ol class="txt" style="list-style-type: none">
+            <li>v4.3 - released 02/25/2020</li>
+            <ul class="txt" style="margin-left: 50px; list-style-type: disc">
+                <li>Added GUI for repacking tweak to .deb</li>
+                <li>Updated what system tweaks to ignore</li>
+                <li>Improved code</li>
+                </ul>
+            <br>
             <li>v4.2.1 - released 02/09/2020</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
                 <li>Fixed Cydia not queuing tweaks</li>
@@ -77,7 +83,7 @@
                 <li>Fix dark mode support</li>
                 <li>Fix ugly whitespace in the alerts</li>
                 <li>Bug fixes</li>
-                <li>Code improvements</li>
+                <li>Improved code</li>
                 </ul>
             <br>
             <li>v4.1.1 - released 11/16/19</li>
