--- a/depictions/darkmodetoggle/darkmodetoggle.html
+++ b/depictions/darkmodetoggle/darkmodetoggle.html
@@ -20,6 +20,7 @@
             <li>Customize exactly which tweaks you want enabled/disabled in dark/light mode</li>
             <li>Change preferences of other tweaks when toggling dark mode</li>
             <li>Toggle Noctis12 instantly</li>
+            <li>Change SnowBoard themes with dark mode</li>
             <li>Works with the stock iOS 13 dark mode Control Center module</li>
             <li>Provides a custom Control Center module for iOS 12 and older (you can still use the custom module on iOS 13)</li>
             <li>Optionally run a shell script as root when toggling</li>
