--- a/depictions/batchomatic/batchomatic.html
+++ b/depictions/batchomatic/batchomatic.html
@@ -76,12 +76,12 @@
             <br>
             <li>v4.2 - released 02/02/2020</li>
             <ul class="txt" style="margin-left: 50px; list-style-type: disc">
-                <li>Switch to an icon for the Batchomatic button</li>
-                <li>Add support for the latest version of Installer</li>
-                <li>Add “Remove all repos” feature</li>
-                <li>UI Improvements</li>
-                <li>Fix dark mode support</li>
-                <li>Fix ugly whitespace in the alerts</li>
+                <li>Switched to an icon for the Batchomatic button</li>
+                <li>Added support for the latest version of Installer</li>
+                <li>Added “Remove all repos” feature</li>
+                <li>UI improvements</li>
+                <li>Fixed dark mode support</li>
+                <li>Fixed ugly whitespace in the alerts</li>
                 <li>Bug fixes</li>
                 <li>Improved code</li>
                 </ul>
